Agent app commit_1

--- a/Insurance app.postman_collection.json
+++ b/Insurance app.postman_collection.json
@@ -7,7 +7,7 @@
 	},
 	"item": [
 		{
-			"name": "Autentification",
+			"name": "Autentification with token",
 			"event": [
 				{
 					"listen": "prerequest",
